# iziko-rag-chatbot

./: .env.example  .gitignore  PLANNING.md  README.md  app.py  evaluator.py  main.py  pyproject.toml  requirements.txt
evaluation/: eval.py  playground_tests.jsonl  test.py  tests.jsonl
implementation/: answer.py  ingest.py
knowledge-base/company/: about.md  careers.md  culture.md  overview.md
knowledge-base/contracts/: Contract with Cape Town Mutual Bank for IzikoConnect.md  Contract with Highveld Energy Holdings for IzikoGuard.md  Contract with Karoo Logistics Group for IzikoConnect.md  Contract with Karoo Logistics Group for IzikoFlow.md  Contract with Pioneer Retail South Africa for IzikoConnect.md  Contract with Pioneer Retail South Africa for IzikoData.md  Contract with Sandton Capital Partners for IzikoFlow.md  Contract with Western Cape Health Network for IzikoGuard.md
knowledge-base/employees/: Aisha Patel.md  Lerato Khumalo.md  Naledi van der Merwe.md  Pieter Coetzee.md  Sipho Dlamini.md  Thandiwe Mokoena.md
knowledge-base/products/: IzikoConnect.md  IzikoData.md  IzikoFlow.md  IzikoGuard.md
